style.css
@import url('https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap');

:root {
    --main-colour: rgba(251, 248, 241);
    --secondary-colour: rgba(66, 95, 87);
    --tertiary-colour: rgba(206, 229, 208, 0.3);
}

/* 
****************************************************************
Main Styling - Start - All Devices
****************************************************************
*/

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Zen Loop', cursive;
    color: black;
    background-color: var(--main-colour);
    font-size: 1.8rem;
    letter-spacing: 2px;
    font-weight: bold;
    overflow-x: hidden;
}

h1,
h2 {
    font-weight: bold;
}

a {
    text-decoration: none;
}

.cursive-text {
    font-family: 'Oooh Baby', cursive;
}

.reveal {
    position: relative;
    transform: translateY(150px);
    opacity: 0;
    transition: all 2s;
}

.reveal.activeScroll {
    transform: translateY(0px);
    opacity: 1;
}

.text-container {
    background-color: var(--tertiary-colour);
    padding: 2rem;
    margin-bottom: 2rem;
}

.col {
    border: 2px sold blue;
}

/* 
****************************************************************
Main Styling - End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Headings - Start - All Devices
****************************************************************
*/

.headingTitle {
    font-family: 'Oooh Baby', cursive;
    text-align: center;
    font-size: 3rem;
    padding-top: 10rem;
    padding-bottom: 5rem;
}

.smaller-heading-title {
    font-family: 'Oooh Baby', cursive;
    text-align: center;
    padding-top: 2rem;
    padding-bottom: 2rem;
}

/* 
****************************************************************
                Headings - End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Nav Bar- Start - All Devices
****************************************************************
*/

.navbar {
    background-color: var(--secondary-colour);
    letter-spacing: 0.1rem;
}

.navbar-brand {
    font-size: 2.7rem;
    padding-left: 0.5rem;
    color: var(--main-colour);
    margin-top: -1.5rem;
    font-weight: 400;
}

.navbar-brand-bigger-letter {
    font-size: 4.5rem;
}

.navbar-toggler {
    margin-right: 1rem;
    margin-bottom: 1rem;
    font-size: 1.5rem;
    border-color: var(--main-colour);
}

@media (max-width: 400px) {
    .navbar-toggler {
        font-size: 1rem;
        margin-right: 0.5rem;
    }
}

.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
    outline: none;
    border: 2px solid var(--main-colour);
    box-shadow: none;
}

.fa-bars {
    color: var(--main-colour);
}

.slogan {
    font-size: 2rem;
    text-align: right;
    margin-top: -2rem;
}

.navbar-nav {
    text-transform: uppercase;
}

.nav-item {
    padding-right: 5rem;
    padding-left: 1rem;
}

.nav-link {
    color: var(--main-colour);
    font-weight: 500;
}

.nav-link:hover {
    color: var(--main-colour);
    font-weight: bold;
}

.active {
    font-weight: 900;
}

.dropdown-menu {
    background-color: var(--secondary-colour);
}

.dropdown-item {
    color: var(--main-colour);
}

.dropdown-item:hover {
    background-color: var(--main-colour);
    font-weight: bold;
}

/* 
****************************************************************
                Nav Bar- End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Hero Image- Start - All Devices (????)
****************************************************************
*/

.carousel-container {
    height: 75vh;
    background-color: var(--secondary-colour);
    width: 100vw;
}

.masthead-one {
    min-height: 75vh;
    width: 100vw;
    background-image: url('assets/website-images/massage-stock-image.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50%;
    position: relative;
    color: var(--main-colour);
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
    letter-spacing: 4px;
    font-size: 4rem;
}

.overlay {
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: center;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.4);
}

.overlay > h1 {
    opacity: 0;
}

.overlay > p {
    opacity: 0;
}

.overlay > h1 {
    animation: fadeInLeft 1.5s ease forwards;
}

.overlay > p {
    animation: fadeInRight 1.5s ease forwards;
}

@keyframes fadeInLeft {
    0% {
        opacity: 0;
        transform: translateX(-50px);
    }
    100% {
        opacity: 1;
        transform: translateX(0px);
    }
}

@keyframes fadeInRight {
    0% {
        opacity: 0;
        transform: translateX(50px);
    }
    100% {
        opacity: 1;
        transform: translateX(0px);
    }
}

.masthead-two {
    background-image: url('assets/website-images/yoga-pose-marmaid-on-rock.png');
    background-position: center;
}

.fa-chevron-left {
    color: var(--main-colour);
}

.fa-chevron-right {
    color: var(--main-colour);
}

@media (max-width: 768px) {
    .carousel-container {
        height: 66vh;
    }

    .masthead-one {
        min-height: 66vh;
        font-size: 1.4rem;
    }
}

/* ******************
Hero Image- End - All Devices (????) ******************************************** */

/********************** 
About Me - Start - All Devices ********************************************** */

.about-me-paragraph-containers {
    background-color: var(--tertiary-colour);
    padding: 2rem;
    font-size: 1.8rem;
    display: flex;
    align-items: center;
}
/* ... */

